# motifNEAT

./: README.md  pyproject.toml  requirements.txt
examples/: xor.py
motifNEAT/: __init__.py
motifNEAT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
motifNEAT/common/: __init__.py  activation.py  config.py  state.py
motifNEAT/genome/: __init__.py  gene.py
motifNEAT/genome/operations/: crossover.py  mutation.py
motifNEAT/neat/: __init__.py  neat.py  species.py
motifNEAT/tests/: __init__.py  test_experiment.py
motifNEAT/training/: __init__.py  experiment.py
tests/: conftest.py  test_experiment.py
