[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motifNEAT"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A clean, standalone implementation of NeuroEvolution of Augmenting Topologies (NEAT) using JAX and Equinox"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.13",
    "jaxlib>=0.4.13",
    "equinox>=0.11.0",
    "numpy>=1.24.0",
    "networkx>=3.1",
    "matplotlib>=3.7.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
]

[tool.setuptools.packages.find]
include = ["motifNEAT*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q" 